bug correction in pairwise blast script

--- a/reports/thesis/Report.tex
+++ b/reports/thesis/Report.tex
@@ -63,16 +63,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 
 \section*{Introduction}
 
-\subsection*{general (fellowship-like)}
-Sexual reproduction is abundant in nature despite the many costs associated with sex, such as the time and energy spent into mate finding and copulation or the risk of disease transmission. This apparent paradox has sparked the interest of biologists for decades and is still a major topic in evolutionary biology. To understand how the benefits of sex can make up for its costs, it is necessary to understand not only the ecology and population dynamics associated with sexual reproduction, but also the underlying genetics that lead to the formation of individuals with different sexes. These genetic mechanisms can have major genome-wide consequences and strong evolutionary implications. 
-
 \subsection*{New (from scratch)}
 
-The formation of individuals with two different sexes is a crucial stage of development in many organisms and many different strategies have evolved to achieve this differentiation. Sex determination is the upstream signal that defines which developmental path an organism will take.  Understanding the mechanisms underlying these strategies is crucial to understand the ecology of the concerned species, its developmental biology and the evolution of sex determination on a large scale.
+Sex determination is the master switch that orients the developmental trajectory of an organism towards one sex or the other. A wide variety of sex determination mechanisms have been identified across animal species, they can depend on genetic features, the sensing of environmental factors, or a combination of both. An active area of research in evolutionary biology focuses on the study of these mechanisms and the reasons why so many different strategies exist. Because of the abundant diversity of sex determination mechanisms they harbour, insects are a good system to investigate these fundamental questions.
 
-A variety of sex determination systems have been identified, they can be either environmental, genetic or a combination of both. To better understand why the strategies to generate different sexes are so diverse and widespread, it is interesting to study when sex is lost. There are indeed asexual species and even species containing both sexual and asexual lineages. Such cases are frequent in Hymenoptera, a megadiverse order comprising 230,000 described species with many different sex determination mechanisms. Among those mechanisms, haplodiploidy is by far the most common. In haplodiploid species, females lay eggs which develop into haploid males if left unfertilized, and into diploid females if fertilized by male sperm. \\
-Although haploidy is a well described phenomenon, the genetics underlying the detection of haplodiploidy by the embryo are still very little studied. A particular mechanism named complementary sex determination (CSD) has been described and is known to occur in more than 60 hymenopteran species. In CSD species, sex is determined by only one or a few loci. If two different alleles are present in the organism for at least one CSD locus, the organism develops into a female. Haploid eggs therefore develop into males as they are hemizygous for all loci. In wild populations, on the other hand, there is usually a large allelic diversity at CSD, which usually result in heterozygous CSD loci triggering female development. However, when populations are artificially inbred in laboratory strains, the low allelic diversity will eventually result in diploid individuals with all CSD loci homozygous. Such individuals will develop into abnormal diploid males, which, depending on the species, are not viable, sterile or have reduced fitness. The presence of such diploid males is typically how the presence of CSD is inferred in a species, and the frequency of these males has been used in breeding experiments to determine the number of CSD loci in a species from mathematical models.\\
-\textit{Lysiphlebus fabarum} is a haplodiploid parasitoid wasp with reproductive polymorphism (both sexual and asexual lineages) where CSD is known to be the mechanism underlying sex determination. As it has both reproductive polymorphism and a simple sex determination system, it has great potential as a model species for the study of questions relating to sex determination and the evolutionary maintenance of sex. 
+Here we are interested in complementary sex determination (CSD) a simple genetic mechanism of sex determination which was proposed to be the ancestral system in Hymenoptera, one of the largest orders of insects comprising over 230,000 described species. All Hymenoptera are haplodiploid; females lay eggs which develop into haploid males if left unfertilized, or into diploid females if fertilized. \\
+Although haploidy is a well described phenomenon, the genetics underlying the detection of haplodiploidy in the embryo are still very little studied. The molecular mechanism of CSD has only been described in the honeybee, but  it is known to occur in more than 60 hymenopteran species. In CSD species, only one or a few loci assume the role of sex determiners by acting as the switch underlying haplodiploidy. If two different alleles are present in the egg for at least one CSD locus, the organism develops into a female. Haploid eggs therefore develop into males as they are hemizygous for all loci. In diploid eggs, on the other hand, most individuals will be heterozygous for at least one CSD loci,and develop into females. However, in strongly inbred populations, such as artificially inbred laboratory strains, the low allelic diversity will eventually result in diploid individuals with all CSD loci homozygous. Such individuals will develop into abnormal diploid males, which, depending on the species, are not viable, sterile or have reduced fitness. The presence of such diploid males is typically used to infer the presence of CSD in a species, and the frequencies of these males in breeding experiments have been used to estimate the number of CSD loci in a species from mathematical models.\\
+\textit{Lysiphlebus fabarum} is a haplodiploid parasitoid wasp with both sexual and asexual lineages where CSD is known to be the mechanism underlying sex determination. In asexual lineages, the meiotic product undergoes fusion with a polar body through central-fusion automixis and the resulting eggs are diploid and develop into females without requiring fertilization by a male. As it has both reproductive polymorphism and a simple sex determination system, \textit{L. fabarum} has great potential as a model species for the study of questions relating to sex determination and the evolutionary maintenance of sex. 
 In this study, we investigate the genetic basis of CSD in \textit{L. fabarum}. The genetics of CSD is only known in the honeybee (\textit{Apis mellifera}) where the \textit{csd} gene stems from a duplication of the ancestral \textit{fem}, a \textit{transformer} homolog. The \textit{csd} gene underwent strong positive selection which resulted in neo functionalization and it now acts as an RNA splicing protein acting on its paralog, \textit{fem}. Uncovering the mechanisms underlying CSD in a distant species will provide valuable insight into the evolution of sex determination in insects. Here, we show that \textit{L. fabarum} has ml-CSD and that the loci are close to the centromeres. Our results also suggest a different mechanism from the \textit{Apis mellifera} CSD which might have evolved independently.
 
 
