--- a/reports/thesis/Report.tex
+++ b/reports/thesis/Report.tex
@@ -69,7 +69,7 @@ Sex determination is the master switch that orients the developmental trajectory
 
 Here we are interested in complementary sex determination (CSD) a simple genetic mechanism of sex determination which was proposed to be the ancestral system in Hymenoptera, one of the largest orders of insects comprising over 230,000 described species. All Hymenoptera are haplodiploid; females lay eggs which develop into haploid males if left unfertilized, or into diploid females if fertilized. \\
 Although haploidy is a well described phenomenon, the genetics underlying the detection of haplodiploidy in the embryo are still very little studied. The molecular mechanism of CSD has only been described in the honeybee, but  it is known to occur in more than 60 hymenopteran species. In CSD species, only one or a few loci assume the role of sex determiners by acting as the switch underlying haplodiploidy. If two different alleles are present in the egg for at least one CSD locus, the organism develops into a female. Haploid eggs therefore develop into males as they are hemizygous for all loci. In diploid eggs, on the other hand, most individuals will be heterozygous for at least one CSD loci,and develop into females. However, in strongly inbred populations, such as artificially inbred laboratory strains, the low allelic diversity will eventually result in diploid individuals with all CSD loci homozygous. Such individuals will develop into abnormal diploid males, which, depending on the species, are not viable, sterile or have reduced fitness. The presence of such diploid males is typically used to infer the presence of CSD in a species, and the frequencies of these males in breeding experiments have been used to estimate the number of CSD loci in a species from mathematical models.\\
-\textit{Lysiphlebus fabarum} is a haplodiploid parasitoid wasp with both sexual and asexual lineages where CSD is known to be the mechanism underlying sex determination. In asexual lineages, the meiotic product undergoes fusion with a polar body through central-fusion automixis and the resulting eggs are diploid and develop into females without requiring fertilization by a male. As it has both reproductive polymorphism and a simple sex determination system, \textit{L. fabarum} has great potential as a model species for the study of questions relating to sex determination and the evolutionary maintenance of sex. 
+\textit{Lysiphlebus fabarum} is a haplodiploid parasitoid wasp with both sexual and asexual lineages where CSD is known to be the mechanism underlying sex determination. In asexual lineages, the meiotic product undergoes fusion with a polar body through central-fusion automixis and the resulting eggs are diploid and develop into females without requiring fertilization by a male. %As it has both reproductive polymorphism and a simple sex determination system, \textit{L. fabarum} has great potential as a model species for the study of questions relating to sex determination and the evolutionary maintenance of sex. 
 In this study, we investigate the genetic basis of CSD in \textit{L. fabarum}. The genetics of CSD is only known in the honeybee (\textit{Apis mellifera}) where the \textit{csd} gene stems from a duplication of the ancestral \textit{fem}, a \textit{transformer} homolog. The \textit{csd} gene underwent strong positive selection which resulted in neo functionalization and it now acts as an RNA splicing protein acting on its paralog, \textit{fem}. Uncovering the mechanisms underlying CSD in a distant species will provide valuable insight into the evolution of sex determination in insects. Here, we show that \textit{L. fabarum} has ml-CSD and that the loci are close to the centromeres. Our results also suggest a different mechanism from the \textit{Apis mellifera} CSD which might have evolved independently.
 
 
