working on hit validation and estimation of genotype miscall rates

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -1302,7 +1302,7 @@ Following Casper suggestions and comments, I tried running the association mappi
 From now on, I will be considering all SNPs for the association mapping. For the centromere identification however, I need to keep the aforementioned SNPs out as the metric used is heterozygosity relative to mothers.
 
 \section{identifying false positives}
-We can use the assumptions of the CSD model to identify false positive CSD hits. This can be done by counting the number of females that are heterozygous at 0, 1, 2,...,N of the N CSD candidates.
+We can use the assumptions of the CSD model to identify false positive CSD hits. This can be done by counting the number of females that are heterozygous at 0, 1, 2,...,N of the N CSD candidates. If a candidate is actually a false positive, there should be no (or very few) females that are heterozygous at it, but at no other CSD locus.
 
 \section{pushing parameters}
 
